err/wetransfer-upload.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/requests_toolbelt'...
Listing './lib/python3.5/site-packages/requests_toolbelt/adapters'...
Listing './lib/python3.5/site-packages/requests_toolbelt/auth'...
Listing './lib/python3.5/site-packages/requests_toolbelt/downloadutils'...
Listing './lib/python3.5/site-packages/requests_toolbelt/multipart'...
Listing './lib/python3.5/site-packages/requests_toolbelt/threaded'...
Listing './lib/python3.5/site-packages/requests_toolbelt/utils'...
Listing './lib/python3.5/site-packages/requests_toolbelt-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wetransfer'...
Compiling './lib/python3.5/site-packages/wetransfer/main.py'...
***   File "./lib/python3.5/site-packages/wetransfer/main.py", line 32
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wetransfer_upload-0.0.5.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
